--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
         "@angular/common": "~11.2.10",
         "@angular/compiler": "~11.2.10",
         "@angular/core": "~11.2.10",
+        "@angular/elements": "^11.2.10",
         "@angular/forms": "~11.2.10",
         "@angular/platform-browser": "~11.2.10",
         "@angular/platform-browser-dynamic": "~11.2.10",
         "@angular/router": "~11.2.10",
+        "@ux-aspects/ux-aspects": "^3.7.0",
+        "bootstrap": "^4.6.0",
+        "ngx-bootstrap": "^6.2.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.11.3"
@@ -30,6 +34,7 @@
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
+        "concat-files": "^0.1.1",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
         "karma": "~6.1.0",
@@ -37,7 +42,11 @@
         "karma-coverage": "~2.0.3",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "^1.5.0",
+        "postcss": "^8.2.10",
+        "postcss-prefixwrap": "^1.22.1",
         "protractor": "~7.0.0",
+        "replace-in-file": "^6.2.0",
+        "rimraf": "^3.0.2",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
         "typescript": "~4.1.5"
