--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build",
+        "build": "ng --prod build",
         "postbuild": "node build-scripts/finalize-build-output.js",
         "postinstall": "node build-scripts/prepare-3rd-party-css.js",
         "test": "ng test",
